# tally

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  package-lock.json  package.json  wrangler.toml
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: config.rs  http.rs  lib.rs  main.rs
cli/src/commands/: agents.rs  deploy.rs  destroy.rs  init.rs  mod.rs  teams.rs  version.rs
cli/tests/: cli_smoke.rs
docs/specs/: cli-sub-pr-phase-0.md  dispatch-sub-pr-phase-0.md  http-api-surface-sub-pr-phase-0.md  integration-tests-sub-pr-test-plan.md  phase-1b-spec.md  phase-1b-sub-pr-1-phase-0.md  tally-team-do-phase-0.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: error_codes.rs  happy_path.rs  multi_target.rs  teams_routes.rs
tally-core/: Cargo.toml
tally-core/src/: lib.rs  team_meta.rs  wake_record.rs
tally-worker/: Cargo.toml
tally-worker/src/: dispatch_consts.rs  durable_object.rs  error.rs  lib.rs  rpc.rs  wake_router.rs  wake_types.rs
