[workspace]
resolver = "2"
members = [
    "tally-core",
    "tally-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/nicholasraimbault/tally-workers"

[workspace.dependencies]
# Internal
tally-core = { path = "tally-core", version = "0.1.0" }

# External (used in tally-core and worker)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Stoa stack (via git dep until publishing setup lands per skytale issue #449)
stoa = { git = "https://github.com/nicholasraimbault/skytale", rev = "1527a7b" }

# async-trait macro — used by tally-worker to implement Stoa's
# WakeRouter trait (which is itself an `#[async_trait]` trait per
# Workstream B' PR α). Version pinned to match skytale's pin for
# consistency.
async-trait = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
