[package]
name = "tally-core"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
description = "Shared types and HTTP-client logic for the Tally Cloudflare runtime and Tally CLI."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
