[package]
name = "tally-core"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
description = "Shared types and HTTP-client logic for the Tally Cloudflare runtime and Tally CLI."

# [dependencies] intentionally empty in this placeholder crate.
# serde, serde_json, and other deps will be added by Workstream C
# tasks (tally-core types PR) when they're actually used.
