[package]
name = "tally-worker"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
description = "Tally's Cloudflare Worker entry point. Implements the HTTP surface routing into TallyTeamDO."

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5"
# tally-core, serde, serde_json deferred to Workstream C tasks where
# they're actually used.
